# CTGraphX

./: .gitignore  CMakeLists.txt
imgui/: CMakeLists.txt
include/: application.h
include/ct/: ct_head.h
include/helpers/: vec4.h
include/state/: ct_head_state.h  render_settings_state.h
include/window/: ct_head_viewer.h  debug_panel.h  render_settings.h  window.h
src/: application.cpp  main.cpp
src/ct/: ct_head.cpp
src/helpers/: vec4.cpp
src/window/: ct_head_viewer.cpp  debug_panel.cpp  render_settings.cpp  window.cpp
